--- a/main.css
+++ b/main.css
@@ -11,13 +11,17 @@ p{
 }
 
 div {
+    margin-left: 15%;
+    margin-right:15%;
+    padding: 15px;
     text-align: center;
     background-color: rgba(0, 255, 255, 0.2); 
     backdrop-filter: blur(10px);
-    border-radius: 2%;
+    border-radius: 3vw;
 }
 
 img {
+    max-width: 400px;
     border-radius: 10%;
-    height: 200px;
+    max-height: 200px;
 }
