--- a/main.css
+++ b/main.css
@@ -7,7 +7,13 @@ body {
 
 p{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: rgba(0, 255, 255, 1);
+    color: rgb(1, 32, 71);
+}
+
+h1{
+    color: rgb(6, 230, 10); 
+    background-color: rgb(0, 63, 0); 
+    width: fit-content;
 }
 
 div {
